# sycl-rayt

./: CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md
include/file-io/: file_io.hpp
include/image-io/: image_io.hpp
include/math/: funcs.hpp  vec3.hpp
include/random-util/: random_util.hpp
src/: camera.hpp  common.hpp  hit_record.hpp  hitable.hpp  ray.hpp  sphere.hpp  sycl-rayt.cpp
src/kernels/: create_world.hpp  render.hpp  render_init.hpp
